# stock_picker

./: .bedrock_agentcore.yaml  .env.example  .gitignore  README.md  agentcore-extra-perms.json  agentcore-runtime-ecr-pull.json  pyproject.toml  report.md
.bedrock_agentcore/abhinav_stock_picker/: Dockerfile
src/stock_picker_1/: agent_entrypoint.py  crew.py  main.py  secrets.py
src/stock_picker_1/config/: agents.yaml  tasks.yaml
