[project]
name = "stock_picker_1"
version = "0.1.0"
description = "stock_picker_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.1",
    "litellm>=1.60",
    "bedrock-agentcore>=0.1",
    "bedrock-agentcore-starter-toolkit>=0.1.21",
    "boto3>=1.34",
]

[project.scripts]
stock_picker_1 = "stock_picker_1.main:run"
run_crew = "stock_picker_1.main:run"
train = "stock_picker_1.main:train"
replay = "stock_picker_1.main:replay"
test = "stock_picker_1.main:test"
run_with_trigger = "stock_picker_1.main:run_with_trigger"
agentcore_entrypoint = "stock_picker_1.agent_entrypoint:app.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
